fix sizing on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,8 @@
   }
 
   p,
-  li {
+  li,
+  .nav a {
     font-size: 2.2vh !important;
   }
 
